test/errors/type/collections/set/__bxor3.yasl
echo mt.lookup(collections.set(), .__bxor)(1, true)
